--- a/ICP_Android/CameraMapsApplication/app/src/main/res/layout/activity_main.xml
+++ b/ICP_Android/CameraMapsApplication/app/src/main/res/layout/activity_main.xml
@@ -23,20 +23,45 @@
         android:id="@+id/main_btn_record"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:onClick="onLocationClick"
-        android:text="Display Location"
-        android:layout_marginTop="54dp"
         android:layout_below="@+id/main_btn_photo"
-        android:layout_centerHorizontal="true"></Button>
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="35dp"
+        android:onClick="onLocationClick"
+        android:text="Display Location"></Button>
 
     <Button
         android:id="@+id/sensor"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:onClick="onSensorClick"
-        android:text="Display Sensor"
+        android:layout_centerHorizontal="true"
         android:layout_marginTop="100dp"
+        android:onClick="onSensorClick"
 
-        android:layout_centerHorizontal="true"></Button>
+        android:text="Display Sensor"></Button>
+
+    <Button
+        android:id="@+id/main_file_save"
+        android:layout_width="wrap_content"
+        android:layout_height="41dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="118dp"
+        android:layout_marginTop="320dp"
+        android:layout_marginEnd="114dp"
+        android:layout_marginBottom="150dp"
+        android:onClick="onFileClick"
+        android:text="File Save" />
+
+    <Button
+        android:id="@+id/button2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="75dp"
+        android:onClick="onAudioClick"
+        android:text="Audio- Recorder" />
 
 </RelativeLayout>
